--- a/_MOB_paper.Rnw
+++ b/_MOB_paper.Rnw
@@ -86,10 +86,10 @@ In summary, the rationale of a MOB algorithm consists of the following steps:
 
 \todo{why are the spaces so big? I didn't change the enumerate command}
 \begin{enumerate}
-  \item The model parameters are first estimated jointly for all persons in the current node, starting with the full sample.
-  \item Structural change in the model parameters is assessed with respect to each available covariate.
-  \item If there is significant structural change, groups are split along the covariate with the strongest change and using the optimal cutpoint.
-  \item Steps 1--3 are repeated recursively in the resulting groups until there is no more significant structural change (or the groups becomes too small).
+\item The model parameters are first estimated jointly for all persons in the current node, starting with the full sample.
+\item Structural change in the model parameters is assessed with respect to each available covariate.
+\item If there is significant structural change, groups are split along the covariate with the strongest change and using the optimal cutpoint.
+\item Steps 1--3 are repeated recursively in the resulting groups until there is no more significant structural change (or the groups becomes too small).
 \end{enumerate}
 
 For more details on the statistical theory behind unbiased classification and regression trees and MOB, see \citet{Hotetal:2006,StrMalTut:2009:PM,StroyKopf15}.  
@@ -168,7 +168,7 @@ data$program <- factor(ifelse(data$None2_90 == 1, "None",
 ## ageAFTQ: age-adjusted AFQT
 ## Race_child: Hispanic=Race_Child==1; Black=Race_Child==2; White=Race_Child==3
 data$Race_Child <- factor(ifelse(data$Race_Child == 1, "Hispanic", 
-                          ifelse(data$Race_Child == 2, "Black", "White")))
+                                 ifelse(data$Race_Child == 2, "Black", "White")))
 ## family income: PermInc
 ## Mom's years of education: MothED
 part_vars <- c("AgeAFQT", "Race_Child", "PermInc", "Height_Mom81", "MothED")
@@ -180,13 +180,13 @@ testscore_vars <- c(paste0("PPVT_Raw", 2*(43:52)), paste0("AgeTest_Yr", 2*(43:52
 ## Create long dataset
 pred_vars <- "program"
 HS_dat <- reshape(data[ , c(part_vars, id_vars, testscore_vars, pred_vars)], 
-                    varying = list(paste0("PPVT_Raw", 2*(43:52)),
-                                   paste0("AgeTest_Yr", 2*(43:52))),
-                    direction = "long", 
-                    v.names = c("PPVT_Raw", "AgeTest_Yr"))
+                  varying = list(paste0("PPVT_Raw", 2*(43:52)),
+                                 paste0("AgeTest_Yr", 2*(43:52))),
+                  direction = "long", 
+                  v.names = c("PPVT_Raw", "AgeTest_Yr"))
 HS_dat <- HS_dat[ , -which(names(HS_dat) %in% c("time", "id"))]
 names(HS_dat) <- c("AFTQ", "Race", "Income", "Mom_height", "Mom_edu_yrs", 
-                     "ChildID", "MotherID", "Program", "PPVT", "Age")
+                   "ChildID", "MotherID", "Program", "PPVT", "Age")
 HS_dat <- HS_dat[complete.cases(HS_dat), ]
 HS_dat$Age <- sqrt(HS_dat$Age)
 rownames(HS_dat) <- NULL
@@ -290,7 +290,7 @@ design_df <- data.frame(.tree = rep(sort(unique(HS_tree$data$.tree)), each = 2),
 design_df$`PPVT at age 6` <- predict(HS_tree$lmer, newdata = cbind(design_df, Age = sqrt(6)), 
                                      re.form = ~0)
 design_df$`PPVT at age 18` <- predict(HS_tree$lmer, newdata = cbind(design_df, Age = sqrt(18)), 
-                                     re.form = ~0)
+                                      re.form = ~0)
 names(design_df)[1] <- "Node"
 knitr::kable(design_df, format = "latex", digits = 2, 
              caption = "Predicted PPVT scores at different ages.", 
@@ -326,7 +326,7 @@ for (i in 1:10) {
                    minsize = 225)
   lmm <- lmer(PPVT ~ Age*Program + (1|ChildID), 
               data = HS_dat[HS_dat$fold != i, ])
-
+  
   ## Evaluate performance on test data
   results$tree_size[i] <- (length(lmmt$tree)-1)/2
   preds <- predict(lmmt, newdata = HS_dat[HS_dat$fold == i, ], re.form = ~0)
@@ -357,97 +357,131 @@ knitr::kable(res_df, format = "latex", digits = 3,
 \section{\edc{Application Example 2}: Subgroup Detection in Rasch Models}
 \label{sec:TutorialRasch}
 
-Using Rasch trees, we assess DIF for items on math and reading \todo{decide on subscale(s) to include} from the Self-Description Questionnaire \cite{Boyl94}. We use a dataset from the Early Childhood Longitudinal Study-Kindergarten class of 1998--1999 \citep[ECLS-K; ][]{NCES10}. Data were collected from 1,018 schools across the USA. Assessments took place from kindergarten through 8th grade. Here we focus on the 8th grade assessment, in which four SDQ-II items were administered to assess perceived interest and competence in reading, and another four to assess perceived interest and competence in math. Items are presented in Appendix~\ref{sec:AppendixA}. The items were rated by the children on a 4-point scale (“not at all true” through “very true”). We coded responses 1 and 2 as 0, and responses 3 and 4 as 1, to allow for fitting a Rasch model, which assumes binary responses. 
+\begin{itemize}
+\item Example Rasch tree: Data from SPISA (data from Trepte \& Verbeet)
+\item take the subsample of students (only students), and a random subsample of 5000 respondents (seed 04102023)
+\item items could probably appear in Appendix??
+\begin{itemize}
+\item Which painter created this painting? – Andy Warhol.
+\item What do these four buildings have in common? – All four were designed by the same architects.
+\item Roman numbers: What is the meaning of CLVI? – 156.
+\item What was the German movie with the most viewers since 1990? – Der Schuh des Manitu.
+\item In which TV series was the US president portrayed by an African American actor for a long time? – 24.
+\item What is the name of the bestselling novel by Daniel Kehlmann? – Die Vermessung der Welt (Measuring The World).
+\item Which city is the setting for the novel ‘Buddenbrooks’? – Lübeck.
+\item In which city is this building located? – Paris.
+\item Which one of the following operas is not by Mozart? – Aida.
+\end{itemize}
+\end{itemize}
 
-<<echo=FALSE>>=
-SDQ_dat <- readRDS("ECLSK_SDQ.Rda")
+\todo[inline]{at Caro: Ich habe die Daten (glaube ich) mal von dir bekommen (\texttt{spisa\_ges.RData}) und die Item-Formulierungen habe ich aktuell aus dem psychotree Paket. Stimmt das so? Ich glaube, der Originaltest hatte mehrere parallele Skalen, zumindest sind in dem PDF/BUCH von Trepte sehr viel mehr, und sehr ähnliche Items enthalten. Das könnten wir vielleicht nochmal nachgucken.}
+
+We load the data and inspect the first rows. there are several covariates: age (continuous), gender (male, female, missing), area (Language \& Culture, Law \& Economics, Medicine \& Health, Engineering, Sciences, Pharmacy, Geography, Agriculture \& Nutrition, Sports) and 9 items from the culture scale (true/false 0/1). 
+
+@Caro: I excluded the covariates student and occupation, because I took the student subsample; 
+
+<<echo = FALSE>>=
+load("SPISA_example/dat_SPISA.rda")
+covar_data$Student <- NULL
+covar_data$Occupation <- NULL
 @
 
-We used three covariates as possible partitioning variables: Gender (1=Male; 2=Female), race (8 categories: 1=White, non-Hispanic; 2=Black or African-American, non-Hispanic; 3=Hispanic, race specified; 4=Hispanic, race not specified; 5=Asian; 6=Native Hawaiian or other Pasific Islander; 7= American Indian or Alaska native; 7=More than one race) and socio-economic status (range $-$5 to 3). \todo{Add more partitioning variables? This does increase number of splits. But could add one that should not have an effect, e.g., month of birth.} We analyze observations of children with complete data only, yielding a total sample size of \Sexpr{formatC(nrow(SDQ_dat), big.mark=",")}.
-
-
-We load the data and inspect the first three rows as follows:
 
 <<>>=
-SDQ_dat <- readRDS("ECLSK_SDQ.Rda")
-head(SDQ_dat, 3)
+head(covar_data)
+head(culture_scale)
 @
 
-To fit Rasch trees, we use function \verb|raschtree| which is available from R package \textbf{psychotree}. However, the stopping criterion based on the Mantel–Haenszel effect size measure is implemented in R package \verb|raschtreeMH|, which we therefore use here. \todo{might be nice to implement the MH effect-size criterion in the psychotree package for this paper, currently it seems to interfere with plotting the tree}. It can be installed and loaded as follows:
+We create a dataset \texttt{dat\_SPISA} that contains the data of the covariate and the item responses from the culture scale. By assigning the whole scale to the dataset using \texttt{\$}, we can later access item responses from all items using \texttt{\$culture}. 
+<<>>=
+dat_SPISA <- covar_data
+dat_SPISA$culture <- culture_scale
+@
 
-<<warning=FALSE, message=FALSE, eval=FALSE>>=
+The Rasch tree can be fitted with the function \texttt{raschtree} from the R package \texttt{psychotree}. We use the typical formula syntax with the item responses of the culture scale on the left hand side of $\sim$, and the covariates on the right hand side. 
+
+<<echo = FALSE>>=
+if(!file.exists("SPISA_example/Raschtree.rda")){
+  library(psychotree)
+  Raschtree_culture <- raschtree(culture ~  Gender + Age + Area, 
+                                 data = dat_SPISA)
+  save(Raschtree_culture, file = "SPISA_example/Raschtree.rda")
+}
+load("SPISA_example/Raschtree.rda")
+@
+
+
+<<eval = FALSE>>=
+library(psychotree)
+Raschtree_culture <- raschtree(culture ~  Gender + Age + Area,
+                               data = dat_SPISA)
+@
+
+We can plot the Raschtree using the plot function. But it is very big, lots of splits, we don't know whether the splits are due to substantial differences in item difficulty parameters, because the item difficulty profiles in the end nodes are hard to interpret/compare. 
+
+<<fig = TRUE, height = 8, width = 15>>=
+plot(Raschtree_culture)
+@
+
+Mantel-Haenszel trees use the Mantel-Haenszel effect size measure for DIF. it has three categories (A: negligible, B: moderate, C: large). If none of the items has DIF in category B or C (default, but can also be changed so that DIF has to be C), the tree is stopped from growing. 
+
+The software must be installed from github, but will (probably) be implemented in the psychotree package some time in the future
+
+<<>>=
 devtools::install_github("mirka-henninger/raschtreeMH")
-library("raschtreeMH")
+library(raschtreeMH)
 @
 
-<<warning=FALSE, message=FALSE, echo=FALSE, eval=FALSE>>=
-library("raschtreeMH")
+Syntax is very similar to the classical Rasch tree, but an additional argument \texttt{stopfun}, where the mantelhaneszel stopping function can be selected (but also own stopping functions can be provided; see Henninger et al., 2023). The user also has to indicate what kind of purification strategy should be used (none, 2step, iterative). Iterative is recommended. 
+
+<<echo = FALSE>>=
+if(!file.exists("SPISA_example/Raschtree.rda")){
+  library(psychotree)
+  Raschtree_MH_culture <- raschtree(culture ~  Gender + Age + Area, 
+                                  data = dat_SPISA, 
+                                  stopfun= stopfun_mantelhaenszel(purification = "iterative"))
+  Raschtree_MH_culture <- add_mantelhaenszel(Raschtree_MH_culture, purification = "iterative")
+  save(Raschtree_MH_culture, file = "SPISA_example/Raschtree_MH_culture.rda")
+}
+load("SPISA_example/Raschtree_MH_culture.rda")
 @
 
-To fit a Rasch tree, we first create a \verb|data.frame| that contains the item responses and possible partitioning variables:
-
-<<eval=FALSE>>=
-math_items <- c("C7MTHBST", "C7MTHGD", "C7LIKMTH", "C7ENJMTH")
-part_vars <- c("GENDER", "RACE", "WKSESL")
-mydata <- SDQ_dat[ , part_vars]
-mydata$resp <- sapply(SDQ_dat[ , math_items], function(x) ifelse(x > 2, 1, 0)) 
+<<eval = FALSE>>=
+Raschtree_MH_culture <- raschtree(culture ~  Gender + Age + Area, 
+                                  data = dat_SPISA, 
+                                  stopfun= stopfun_mantelhaenszel(
+                                    purification = "iterative"))
 @
 
-Next, we apply function \verb|raschtree| and plot the result:
+For technical reasons, the information about the effect size and ETS classification are not saved in the tree object itself but have to be added afterwards using the \texttt{add\_mantelhaenszel} function. The information can then be accessed from the object using \texttt{\$info\$mantelhaenszel}
 
-<<eval=FALSE>>=
-stop_fun <- stopfun_mantelhaenszel(purification = "iterative", stopcrit = "C")
-math_tree <- raschtree(resp ~ ., data = mydata, stopfun = stop_fun)
+<<eval = FALSE>>=
+Raschtree_MH_culture <- add_mantelhaenszel(Raschtree_MH_culture, 
+                                           purification = "iterative")
+Raschtree_MH_culture$info$mantelhaenszel
 @
 
-<<eval=FALSE>>=
-plot(read_tree, gp = gpar(cex = .7))
+If we now plot the Mantel-Haenszel Rasch tree, we see that the tree is much more concise with a lower number of splits. In addition, we see the number of items classified as A, B, or C in each node. For instance, we see that one item is classified as B in Node 1, and no item as C.
+
+<<fig = TRUE, width = 12, height = 7>>=
+plot(Raschtree_MH_culture)
 @
 
-The resulting tree is presented in Figure~\ref{fig:math_tree}. The splitting nodes show the $p$-value of the corresponding parameter stability tests. The terminal depict the node-specific item difficulties. The difficulties of items 1 (C7MTHBST: Math is one of my best subjects) and 3 (C7LIKMTH: I like math) appear relatively stable and show average difficulty in every subgroup. The difficulties of items 2 (C7MTHGD: I get good grades in math) and 4 (C7ENJMTH: I enjoy doing work in math) are always lower and higher, respectively, and also seem to vary more strongly. 
+We can also color the items in the end node profiles according to a split in the tree. Here, we see that for Node 1 (split on the covariate Area), item 2 shows DIF in category B. Item 2 seems to be easier (y-axis shows item easiness) in certain areas compared to Language, Culture, Medicine, Health, Arts. 
 
-
-
-\begin{figure}%
-\caption{Rasch tree for the four math items.}
-\begin{subfigure}{1.25\textwidth}
-<<fig=TRUE, echo=FALSE, width= 9, height=6, eval=FALSE>>=
-library("psychotree") ## needed for plotting, but interferes with stopfun_mantelhaenszel
-plot(math_tree, gp = gpar(cex = .7))
-detach("package:psychotree", unload = TRUE)
-@
-\end{subfigure}
-\label{fig:math_tree}
-\end{figure}%
-
-We repeat the procedure for the reading items:
-
-<<eval=FALSE>>=
-read_items <-  c("C7ENGBST", "C7GRDENG", "C7LIKRD", "C7ENJRD")
-mydata$resp <- sapply(SDQ_dat[ , read_items], function(x) ifelse(x > 2, 1, 0))
-read_tree <- raschtree(resp ~ ., data = mydata, stopfun = stop_fun)
+<<fig = TRUE, width = 12, height = 7>>=
+plot(Raschtree_MH_culture, color_by_node = 1)
 @
 
-<<eval=FALSE>>=
-plot(read_tree, gp = gpar(cex = .7))
+We can also color by Node 3 (also split on covariate Area). Also here, Item 2 shows DIF. Similarly, item 2 seems to be more difficult (less easy) for respondents who study Arts. 
+
+<<fig = TRUE, width = 12, height = 7>>=
+plot(Raschtree_MH_culture, color_by_node = 3)
 @
 
-The resulting tree is presented in Figure~\ref{fig:read_tree}, which reveals a pattern of difficulties and splits quite similar to Figure~\ref{fig:math_tree}.
+This is interesting, because it is the culture scale. Why should people who study Arts have more problems to solve the item? When we look at the item, it probably makes sense: the items asks what four buildings have in common (Allianz-Arena München, Tate Modern NY, Olympia-Stadion Peking, Elbphilharmonie Hamburg). Two of these buildings are sports stadiums. So probably respondents who are interested in sports, and know these buildings well have an advantage on the item (independent of the level of knowledge about culture). 
 
-\begin{figure}%
-\caption{Rasch tree for the four reading items.}
-\begin{subfigure}{1.25\textwidth}
-<<fig=TRUE, width=9, height=6, echo=FALSE, eval=FALSE>>=
-library("psychotree") ## needed for plotting, interferes with stopfun_mantelhaenszel
-plot(read_tree, gp = gpar(cex = .7))
-detach("package:psychotree", unload = TRUE)
-@
-\end{subfigure}
-\label{fig:read_tree}
-\end{figure}
-
-
-
+\todo[inline]{Maybe a small note on anchoring? Item difficulty profiles are anchoring on the items that do not show DIF. This facilitates comparisons across end nodes (but maybe we do not want to say that??)}
 
 \FloatBarrier
 \section{Discussion}
@@ -491,37 +525,37 @@ How true is each of these about you? (1="not at all true"; 2="a little bit true"
 
 \begin{itemize}
 
-  \item C7MTHBST (math): Math is one of my best subjects.
+\item C7MTHBST (math): Math is one of my best subjects.
 
-  \item C7ANGRY (internalizing): I feel angry when I have trouble learning.
+\item C7ANGRY (internalizing): I feel angry when I have trouble learning.
 
-  \item C7LIKRD (reading): I like reading.
+\item C7LIKRD (reading): I like reading.
 
-  \item C7WRYTST (internalizing): I worry about taking tests.
+\item C7WRYTST (internalizing): I worry about taking tests.
 
-  \item C7MTHGD (math): I get good grades in math.
+\item C7MTHGD (math): I get good grades in math.
 
-  \item C7LONLY (internalizing): I often feel lonely.
+\item C7LONLY (internalizing): I often feel lonely.
 
-  \item C7ENGBST (reading): English is one of my best subjects.
+\item C7ENGBST (reading): English is one of my best subjects.
 
-  \item C7SAD (internalizing): I feel sad a lot of the time.
+\item C7SAD (internalizing): I feel sad a lot of the time.
 
-  \item C7LIKMTH (math): I like math.
+\item C7LIKMTH (math): I like math.
 
-  \item C7WRYWEL (internalizing): I worry about doing well in school.
+\item C7WRYWEL (internalizing): I worry about doing well in school.
 
-  \item C7ENJRD (reading): I enjoy doing work in reading.
+\item C7ENJRD (reading): I enjoy doing work in reading.
 
-  \item C7WRYFIN (internalizing): I worry about finishing my work.
+\item C7WRYFIN (internalizing): I worry about finishing my work.
 
-  \item C7ENJMTH (math): I enjoy doing work in math.
+\item C7ENJMTH (math): I enjoy doing work in math.
 
-  \item C7WRYHNG (internalizing): I worry about having someone to hang out with at school.
+\item C7WRYHNG (internalizing): I worry about having someone to hang out with at school.
 
-  \item C7GRDENG (reading): I get good grades in English.
+\item C7GRDENG (reading): I get good grades in English.
 
-  \item C7ASHAME (internalizing): I feel ashamed when I make mistakes at school.
+\item C7ASHAME (internalizing): I feel ashamed when I make mistakes at school.
 
 \end{itemize}
 
